[package]
name = "blilys"
version = "0.1.0"
authors = ["Stein Magnus Jodal"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
directories = "3.0.1"
eyre = "0.6.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.20"
toml = "0.5.7"
hueclient = { git = "https://github.com/kali/hue.rs.git", branch = "main" }
